apex/grammar.js
    parser_output: ($) => repeat($.declaration),

    // Expressions

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.field_access, $.array_access)),
          field(
            "operator",
            alias(
              choice(
                "=",
                "+=",
                "-=",
                "*=",
                "/=",
                "&=",
                "|=",
                "^=",
                "%=",
                "<<=",
                ">>=",
                ">>>="
              ),
              $.assignment_operator
            )
          ),
          field("right", $.expression)
        )
      ),

    _property_navigation: ($) => seq(optional("?"), "."),

    method_invocation: ($) =>
      seq(
        choice(
          field("name", $.identifier),
          seq(
            field("object", choice($.primary_expression, $.super)),
            $._property_navigation,
            optional(seq($.super, $._property_navigation)),
            field("type_arguments", optional($.type_arguments)),
            field("name", $.identifier)
          )
        ),
        field("arguments", $.argument_list)
      ),

    argument_list: ($) => seq("(", commaJoined($.expression), ")"),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => seq($.expression, ";"),

    return_statement: ($) => seq(ci("return"), optional($.expression), ";"),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body)
      ),

    modifiers: ($) =>
      repeat1(
        choice(
          $.annotation,
          ci("global"),
          ci("public"),
          ci("testMethod"),
          ci("protected"),
          ci("override"),
          ci("private"),
          ci("virtual"),
          ci("abstract"),
          ci("static"),
          ci("final"),
          ci("transient"),
          seq(ci("with"), ci("sharing")), // TODO: class only
          seq(ci("without"), ci("sharing")),
          seq(ci("inherited"), ci("sharing"))
        )
      ),

    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";"
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions))
      ),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    void_type: ($) => ci("void"),
    _method_header: ($) =>
      seq(
        optional(
          seq(field("type_parameters", $.type_parameters), repeat($.annotation))
        ),
        field("type", $._unannotated_type),
        $._method_declarator
      ),

    formal_parameters: ($) => seq("(", commaJoined($.formal_parameter), ")"),

    formal_parameter: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_id
      ),

    method_declaration: ($) =>
      seq(
        optional($.modifiers),
        $._method_header,
        choice(field("body", $.block), ";")
      ),

    identifier: ($) => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // Literals

    int: ($) => token(seq(DIGITS, optional(choice("l", "L")))),

    string_literal: ($) => /'(\\[nNrRtTbBfF"'_%\\]|[^\\'])*'/,
  },
});
